--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
 h1{
 	border: 2px solid black;
-	background-color: #E8E4BA;
-	color: #403F33;
+	background-color: #9edaa8;
+	color: #2e5134;
 }
 body{
-	background-color: #FFFBCC;
+	background-color: #d5efda;
 }
